@@ -1,3 +1,8 @@
+2003-05-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf/rtld.c (dl_main): For LD_TRACE_PRELINKING print search scope
+	even if no DT_NEEDED is present.
+
 2003-05-13  David Mosberger  <davidm@hpl.hp.com>
 
 	* sysdeps/unix/sysv/linux/ia64/setjmp.S: Fix the fix from
